crates/etch-core/tests/snapshots/corpus_tests__core-headings-not-a-heading.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "#no-space"
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "##also-not"
          }
        ]
      }
    ]
  },
  "errors": []
}
