crates/etch-core/tests/snapshots/corpus_tests__core-headings-seven-hashes.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "####### Too many hashes for a valid heading"
          }
        ]
      }
    ]
  },
  "errors": []
}
