crates/etch-core/tests/snapshots/corpus_tests__core-inline-across-lines.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Emphasis",
            "content": [
              {
                "type": "Text",
                "value": "Starts on this line"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "and ends on the next"
              }
            ]
          },
          {
            "type": "Text",
            "value": " in the same paragraph."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Strong",
            "content": [
              {
                "type": "Text",
                "value": "Bold starts here"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "and ends here"
              }
            ]
          },
          {
            "type": "Text",
            "value": " in the same paragraph too."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Strikethrough",
            "content": [
              {
                "type": "Text",
                "value": "Strike starts here"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "and ends here"
              }
            ]
          },
          {
            "type": "Text",
            "value": " at the end of the paragraph."
          }
        ]
      }
    ]
  },
  "errors": []
}
