crates/etch-core/tests/snapshots/corpus_tests__core-inline-empty-markers.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "These tokens stay literal: ** and **** in plain text."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "These tokens stay literal too: ~~ and ^^ in plain text."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "These tokens also stay literal: == and ++++ in plain text."
          }
        ]
      }
    ]
  },
  "errors": []
}
