crates/etch-core/tests/snapshots/corpus_tests__core-inline-highlight.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Highlight",
            "content": [
              {
                "type": "Text",
                "value": "Highlighted"
              }
            ]
          },
          {
            "type": "Text",
            "value": " opens this sentence."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This sentence has "
          },
          {
            "type": "Highlight",
            "content": [
              {
                "type": "Text",
                "value": "highlighted"
              }
            ]
          },
          {
            "type": "Text",
            "value": " in the middle."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This sentence ends with "
          },
          {
            "type": "Highlight",
            "content": [
              {
                "type": "Text",
                "value": "highlighted"
              }
            ]
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
