crates/etch-core/tests/snapshots/corpus_tests__core-inline-insert.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Insert",
            "content": [
              {
                "type": "Text",
                "value": "Inserted"
              }
            ]
          },
          {
            "type": "Text",
            "value": " opens this sentence."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This sentence has "
          },
          {
            "type": "Insert",
            "content": [
              {
                "type": "Text",
                "value": "inserted"
              }
            ]
          },
          {
            "type": "Text",
            "value": " in the middle."
          },
          {
            "type": "SoftBreak"
          },
          {
            "type": "Text",
            "value": "This sentence ends with "
          },
          {
            "type": "Insert",
            "content": [
              {
                "type": "Text",
                "value": "inserted"
              }
            ]
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
